--- a/Makefile.test
+++ b/Makefile.test
@@ -1,8 +1,8 @@
 AutomatedMakefile = am
 CC = g++
 
-FILES = SortPlot.o Points.o Point.o Plot.o
-EXECUTABLE = sort.exe
+FILES = QuickTest.o
+EXECUTABLE = test.exe
 
 PROJECT_PATH = $(PROJECT_DIR)
 GTK_PATH = /$(DRIVE_LETTER)/MinGW/GTK
@@ -20,14 +20,5 @@ all: Lab09
 Lab09: 		$(FILES)
 		$(LINK) $(EXECUTABLE) $(FILES) $(LIBS)	
 
-SortPlot.o: 			SortPlot.h SortPlot.cpp Points.cpp 
-		$(COMPILE) SortPlot.cpp Points.cpp
-		
-Points.o:				Points.cpp Points.h
-		$(COMPILE) Points.cpp
-		
-Point.o:				Point.h Point.cpp
-		$(COMPILE) Point.cpp
-		
-Plot.o:					Plot.h Plot.cpp
-		$(COMPILE) Plot.cpp
+SortPlot.o: 			QuickTest.cpp  Sort.h 
+		$(COMPILE) QuickTest.cpp
