--- a/Makefile.test
+++ b/Makefile.test
@@ -20,5 +20,5 @@ all: Lab09
 Lab09: 		$(FILES)
 		$(LINK) $(EXECUTABLE) $(FILES) $(LIBS)	
 
-SortPlot.o: 			QuickTest.cpp  Sort.h 
+QuickTest.o: 			QuickTest.cpp  Sort.h 
 		$(COMPILE) QuickTest.cpp
